
** Added

- *vui-typed-field component*: New component in =vui-components.el= for typed input with parsing and validation. Uses component state to preserve raw input (e.g., users can see "123f" they typed while error is displayed).
  - Supported types: =integer=, =natnum=, =float=, =number=, =file=, =directory=, =symbol=, =sexp=
  - =:on-change= and =:on-submit= receive typed values only when input is valid
  - =:on-error= callback receives =(error-msg raw-input)= on invalid input
  - Numeric constraints via =:min= and =:max=
  - Custom validation via =:validate= (receives typed value)
  - Error display via =:show-error= (=t= or ='below= for below field, ='inline= for same line)
  - =:required= constraint for non-empty validation
- *Typed field shortcuts* in =vui-components.el= (wrappers around =vui-typed-field=):
  - =vui-integer-field=, =vui-natnum-field=, =vui-float-field=, =vui-number-field= for numeric input
  - =vui-file-field=, =vui-directory-field= for path input
  - =vui-symbol-field=, =vui-sexp-field= for Lisp input

** Changed

- *vui-components.el*: New component library with higher-level components built on vui primitives.
- =vui-collapsible=: Togglable section that expands/collapses content. Supports both uncontrolled (manages own state) and controlled (=:expanded= prop) modes. Features customizable indicators, title face, indentation, and proper nested indentation via context propagation.
- *Semantic text components*: Thin wrappers around =vui-text= with customizable faces that inherit from standard Emacs faces:
  - =vui-heading= with =:level= (1-8) and =vui-heading-1= through =vui-heading-8= (inherit from =outline-1= through =outline-8=)
  - =vui-strong= (inherit from =bold=), =vui-italic= (inherit from =italic=)
  - =vui-muted= (inherit from =shadow=), =vui-code= (inherit from =fixed-pitch=)
  - =vui-error= (inherit from =error=), =vui-warning= (inherit from =warning=), =vui-success= (inherit from =success=)

** Fixed
